Big changes. Several components.

--- a/source/index.html
+++ b/source/index.html
@@ -2,4 +2,131 @@
 layout: default
 title: Home
 ---
-<h1>Home</h1>
+<section class="c-section">
+  <div class="section__inner c-container c-container--max-width">
+    <div class="c-section__header">
+      <h2 class="c-section__title">Section title</h2>
+    </div>
+    <div class="c-section__body u-flex@m u-flex@l u-flex-justify-content-space-between@m u-flex-justify-content-space-between@l u-flex-wrap@m u-flex-wrap@l">
+
+      <div class="c-teaser">
+        <div class="c-teaser__header">
+          <img src="http://via.placeholder.com/150x150" class="c-teaser__image" alt="Image">
+        </div>
+        <div class="c-teaser__body">
+          <h3 class="c-teaser__title">Front End Development</h3>
+          <div class="c-teaser__content">
+            <p>Lorem ipsum dolor sit amet, ius tincidunt temporibus ex, id sint fabellas per. His idque liber ut. Vim tota noster an, atqui aeque ludus pro ut. Clita perfecto id mea, est cu eius lobortis complectitur, usu an possim scaevola. Harum laudem ut mea, quando ceteros neglegentur eos ea.</p>
+          </div>
+        </div>
+        <div class="c-teaser__footer">teaser footer</div>
+      </div><!-- /.c-teaser -->
+
+      <div class="c-teaser">
+        <div class="c-teaser__header">
+          <img src="http://via.placeholder.com/150x150" class="c-teaser__image" alt="Image">
+        </div>
+        <div class="c-teaser__body">
+          <h3 class="c-teaser__title">Front End Development</h3>
+          <div class="c-teaser__content">
+            <p>Lorem ipsum dolor sit amet, ius tincidunt temporibus ex, id sint fabellas per. His idque liber ut. Vim tota noster an, atqui aeque ludus pro ut. Clita perfecto id mea, est cu eius lobortis complectitur, usu an possim scaevola. Harum laudem ut mea, quando ceteros neglegentur eos ea.</p>
+          </div>
+        </div>
+        <div class="c-teaser__footer">teaser footer</div>
+      </div><!-- /.c-teaser -->
+
+      <div class="c-teaser">
+        <div class="c-teaser__header">
+          <img src="http://via.placeholder.com/150x150" class="c-teaser__image" alt="Image">
+        </div>
+        <div class="c-teaser__body">
+          <h3 class="c-teaser__title">Front End Development</h3>
+          <div class="c-teaser__content">
+            <p>Lorem ipsum dolor sit amet, ius tincidunt temporibus ex, id sint fabellas per. His idque liber ut. Vim tota noster an, atqui aeque ludus pro ut. Clita perfecto id mea, est cu eius lobortis complectitur, usu an possim scaevola. Harum laudem ut mea, quando ceteros neglegentur eos ea.</p>
+          </div>
+        </div>
+        <div class="c-teaser__footer">teaser footer</div>
+      </div><!-- /.c-teaser -->
+    </div><!-- /.c-section__body -->
+    <div class="c-section__footer">section footer</div>
+  </div>
+</section>
+<section class="c-section">
+  <div class="section__inner c-container c-container--max-width">
+    <div class="c-section__header">
+      <h2 class="c-section__title">Section title</h2>
+    </div>
+    <div class="c-section__body u-flex@m u-flex@l u-flex-justify-content-space-between@m u-flex-justify-content-space-between@l u-flex-wrap@m u-flex-wrap@l">
+
+      <div class="c-work-item">
+        <div class="c-work-item__image"><img src="http://via.placeholder.com/300x300" alt=""></div>
+        <span class="c-work-item__name">Name</span>
+        <a href="#!" class="c-work-item__link">Link</a>
+      </div><!-- /.c-work-item -->
+
+      <div class="c-work-item">
+        <div class="c-work-item__image"><img src="http://via.placeholder.com/300x300" alt=""></div>
+        <span class="c-work-item__name">Name</span>
+        <a href="#!" class="c-work-item__link">Link</a>
+      </div><!-- /.c-work-item -->
+
+      <div class="c-work-item">
+        <div class="c-work-item__image"><img src="http://via.placeholder.com/300x300" alt=""></div>
+        <span class="c-work-item__name">Name</span>
+        <a href="#!" class="c-work-item__link">Link</a>
+      </div><!-- /.c-work-item -->
+
+    </div><!-- /.c-section__body -->
+    <div class="c-section__footer">section footer</div>
+  </div>
+</section>
+<section class="c-section">
+  <div class="section__inner c-container c-container--max-width">
+    <div class="c-section__header">
+      <h2 class="c-section__title">Section title</h2>
+    </div>
+    <div class="c-section__body u-flex@m u-flex@l u-flex-justify-content-space-around@m u-flex-justify-content-space-around@l u-flex-align-items-center@m u-flex-align-items-center@l u-flex-wrap@m u-flex-wrap@l">
+
+      <div class="c-client-logo">
+        <img src="http://via.placeholder.com/100x50" class="c-client-logo__image">
+      </div>
+      <div class="c-client-logo">
+        <img src="http://via.placeholder.com/150x70" class="c-client-logo__image">
+      </div>
+      <div class="c-client-logo">
+        <img src="http://via.placeholder.com/120x80" class="c-client-logo__image">
+      </div>
+      <div class="c-client-logo">
+        <img src="http://via.placeholder.com/80x80" class="c-client-logo__image">
+      </div>
+      <div class="c-client-logo">
+        <img src="http://via.placeholder.com/150x100" class="c-client-logo__image">
+      </div>
+      <div class="c-client-logo">
+        <img src="http://via.placeholder.com/200x50" class="c-client-logo__image">
+      </div>
+
+    </div>
+    <div class="c-section__footer">section footer</div>
+  </div>
+</section>
+<section class="c-section">
+  <div class="section__inner c-container c-container--max-width">
+    <div class="c-section__header">
+      <h2 class="c-section__title">Section title</h2>
+    </div>
+    <div class="c-section__body u-flex@m u-flex@l u-flex-justify-content-space-around@m u-flex-justify-content-space-around@l u-flex-align-items-center@m u-flex-align-items-center@l u-flex-wrap@m u-flex-wrap@l">
+
+      <figure class="c-testimonial">
+        <blockquote class="c-testimonial__body">
+          Lorem Ipsum
+        </blockquote>
+        <footer class="c-testimonial__footer">
+          <cite class="c-testimonial__cite" title="Testimonial title">Testimonial name</cite>
+        </footer>
+      </figure>
+
+    </div>
+    <div class="c-section__footer">section footer</div>
+  </div>
+</section>
